Updates README to include the new setup steps.